--- a/HeadsUp(SQLite)/FULL/HeadsUp2/app/build.gradle
+++ b/HeadsUp(SQLite)/FULL/HeadsUp2/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation "androidx.sqlite:sqlite:2.2.0"
 }
